2011-09-14    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/markers_to_fastq.py: renamed from
	masks_to_fastq.py; quality string char set to '~', the maximum for
	all fastq subformats.

2011-09-12    <simleo@neuron.crs4.it>

	* bl/vl/app/snp_reannotator/convert_dbsnp.py: changed to output a
	VL marker definition file. Added an option for trimming the mask
	down to a maximum given size.

2011-09-07  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/data_samples.py (DataSample): lastUpdate property removed

	* models/data_sample.ome.xml: lastUpdate property removed

	* models/vessel.ome.xml: lastUpdate property added to Vessel model (and to all children classes by inheritance).

	* bl/vl/kb/drivers/omero/vessels.py (Vessel): lastUpdate property added to Vessel class.

	* bl/vl/kb/drivers/omero/data_samples.py (DataSample): lastUpdate property added to DataSample class.

	* models/data_sample.ome.xml: added lastUpdate property to DataSample model (and to all children classes by inheritance).

2011-09-05  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/objects_collections.py (VLCollection): lastUpdate field added

	* models/collection.ome.xml: added lastUpdate property to VLCollection model (and to all children classes by inheritance). This field has to be used to track all the changes.

2011-08-15    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/ehr.py (EHR.__init__): Now we can handle
	multiple records for the same archetype for the same individual.

2011-08-12    <zag@manzanillo>

	* bl/vl/app/importer/data_sample.py (Recorder.process_chunk):
	added an hack to deal with data reloads. It is really a quick hack.



	* bl/vl/kb/drivers/omero/data_samples.py
	(IlluminaBeadChipAssayType): Missing HUMAN1M_DUO constant.

2011-08-11    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/objects_collections.py (ContainerStatus):
	updated to new enum.

	* models/collection.ome.xml: added 'USED' to ContainerStatus.
